--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "^17.3.0",
     "@angular/ssr": "^17.3.6",
     "@fortawesome/angular-fontawesome": "^0.14.1",
+    "@fortawesome/fontawesome-svg-core": "^6.4.2",
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "express": "^4.18.2",
     "rxjs": "~7.8.0",
