ngx kütüphanesi entegre edildi home-page ve login-page de kullanıldı

--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "@fortawesome/angular-fontawesome": "^0.14.1",
     "@fortawesome/fontawesome-svg-core": "^6.4.2",
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
+    "@ngx-translate/core": "^15.0.0",
+    "@ngx-translate/http-loader": "^8.0.0",
     "angular-calendar": "^0.31.1",
     "date-fns": "^3.6.0",
     "express": "^4.18.2",
