--- a/package.json
+++ b/package.json
@@ -32,7 +32,10 @@
     "angular-calendar": "^0.31.1",
     "date-fns": "^3.6.0",
     "express": "^4.18.2",
+    "jquery": "^3.7.1",
+    "ngx-slick-carousel": "^17.0.0",
     "rxjs": "~7.8.0",
+    "slick-carousel": "^1.8.1",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
   },
